<resources>
    <string name="app_name">UploadPhoto</string>
    <string name="photo">头像</string>
    <string name="upload_photo">上传头像</string>
    <string name="upload_pic">上传多张图片</string>
    <string name="edit_personal_info">编辑个人资料</string>
    <string name="take_picture">拍照</string>
    <string name="select_local_picture">选择本地图片</string>
    <string name="cancel">取消</string>
    <string name="internet_fail_connect">网络连接失败?!</string>
    <string name="uploading">正在上传...</string>
    <string name="choose_upload">选择上传图片类型</string>
    <string name="no_more_than_3">对不起，暂时最多只能上传3张图片</string>
    <string name="upload">发表</string>
    <string name="publish_theme_sucess">创建主题成功</string>
    <string name="publish_theme_failure">创建主题失败</string>
    <string name="playing">正在玩</string>
    <string name="detail">详情</string>
    <string name="input_theme_comment_title">请输入标题</string>
    <string name="input_theme_comment_desc">请输入内容</string>
    <string name="publish_theme_after_login">请登录之后发表</string>
</resources>
